src-tauri/check_output.txt
    Checking my-pet v0.1.0 (D:\Personal Project\Windows\monitoring\my-pet\src-tauri)
error[E0252]: the name `Emitter` is defined multiple times
 --> src\lib.rs:2:5
  |
1 | use tauri::{Manager, Emitter, PhysicalPosition};
  |                      ------- previous import of the trait `Emitter` here
2 | use tauri::Emitter;
  |     ^^^^^^^^^^^^^^ `Emitter` reimported here
  |
  = note: `Emitter` must be defined only once in the type namespace of this module

warning: unused import: `PhysicalPosition`
 --> src\lib.rs:1:31
  |
1 | use tauri::{Manager, Emitter, PhysicalPosition};
  |                               ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `tauri::Emitter`
 --> src\lib.rs:2:5
  |
2 | use tauri::Emitter;
  |     ^^^^^^^^^^^^^^

warning: use of deprecated method `tauri::tray::TrayIconBuilder::<R>::menu_on_left_click`: Use `TrayIconBuilder::show_menu_on_left_click` instead.
  --> src\lib.rs:27:22
   |
27 |                     .menu_on_left_click(false)
   |                      ^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

For more information about this error, try `rustc --explain E0252`.
warning: `my-pet` (lib) generated 3 warnings
error: could not compile `my-pet` (lib) due to 1 previous error; 3 warnings emitted
